--- a/style.css
+++ b/style.css
@@ -208,3 +208,33 @@ body{
 .menuRight img{
     height: 120%;
  }
+
+
+ 
+ /* gallery css start here */
+.wrapGallery{
+    /* width: 100vw; */
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content:flex-start; */
+    gap: 0.6em;
+    height: fit-content;
+    margin: 0px 75px;
+}
+ .galleryImg{
+  
+    max-width: 270px;
+    height: 185px;
+    border: none;
+    overflow: hidden;
+    border-radius: 5px;
+    transition: all 0.3s;
+ }
+ .galleryImg img{
+    cursor: pointer;
+    height: 100%;
+
+ }
+ .galleryImg:hover{
+    scale: 1.15;
+ }
