--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ a{
 body{
     width: 100vw;
     height: 100vh;
-    background-clip: url
-    ;
+    /* background-clip: url; */
     background-color: #141313;
-    overflow: hidden;
+    overflow-x: hidden;
     padding: 0;
     margin: 0;
     color: white;
@@ -224,7 +223,7 @@ body{
  .galleryImg{
   
     max-width: 270px;
-    height: 185px;
+    height: 12em;
     border: none;
     overflow: hidden;
     border-radius: 5px;
